added form and header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     </head>    
 <Body>
 <Header>
-    <h1>JANE SALDANA</h1>
-    <a href="index.html">HOME</a>
-    <a href="about.html">ABOUT</a>
-    <a href="portfolio.html">PORTFOLIO</a>    
+    <span class="name">JANE SALDANA</span>
+    <nav class="links">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="Contact.html">CONTACT</a> 
+    </nav>   
 </Header>
 <Main>
     <!--Summary-->
@@ -25,12 +28,11 @@
     </Section>
     <!--Quote-->
     <Section>
-        <h4>"A Goal Without a Plan is just a wish"</h4>
+        <div class="quote">"A GOAL WITHOUT A PLAN IS JUST A WISH."-Unknown</div>       
     </Section>
 </Main>
-<footer>
-<p>Github (<a href="https://github.com/jhsaldana">link</a>)</p>
-<img src="ImagesPersonalSite/github-mark-white.png" alt="Github"height="50px" width="50px"/>
+<footer> 
+    <a href="https://github.com/jhsaldana"><img src="ImagesPersonalSite/github-mark-white.png" alt="Github"height="50px" width="50px"/></a>        
 </footer>
 <script src="script.js"></script>
 </Body>
