--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,17 @@
     </head>    
 <Body>
 <Header>
-    <a href="index.html">HOME</a>
-    <a href="about.html">ABOUT</a>
-    <a href="portfolio.html">PORTFOLIO</a>    
-    <h1>My most recent projects!</h1>
+    <span class="name">JANE SALDANA</span>
+    <nav class="links">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a> 
+        <a href="Contact.html">CONTACT</a>
+    </nav>       
 </Header>
 <Main>
     <!--Web Project 1-->
+    <h1>My most recent projects!</h1>
     <Section>
         <h2>The First Project</h2>
         <img src="ImagesPersonalSite/Finance1.jpg" alt="Finance1" height="200px" width="200px"/>        
@@ -38,8 +42,7 @@
     </Section>
 </Main>
 <footer>
-<p>Github (<a href="https://github.com/jhsaldana">link</a>)</p>
-<img src="ImagesPersonalSite/github-mark-white.png" alt="Github"height="50px" width="50px"/>
+    <a href="https://github.com/jhsaldana"><img src="ImagesPersonalSite/github-mark-white.png" alt="Github"height="50px" width="50px"/></a> 
 </footer>
 <script src="script.js"></script>
 </Body>
